# go-away

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/stack/: staging.yml
.github/workflows/: staging_deploy.yml
sql/: down_first.sql  up-db.py  up_first.sql
src/go_away/: __main__.py
src/go_away/core/: config.py  get_ip.py  init_db.py
src/go_away/store/: base.py  hits.py
src/go_away/web/: app.py
src/go_away/web/views/: health.py  redirector.py
