[tool.poetry]
name = "go_away"
version = "0.1.0"
description = "Redirect service"
authors = ["Martin Winks <cat@snejugal.ru>"]
license = "MIT"
packages = [
    { include = "go_away", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
asyncpg = "^0.22.0"
yarl = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
